--- a/package.json
+++ b/package.json
@@ -5,21 +5,55 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@angular/animations": "~17.0.0",
+    "@angular/common": "~17.0.0",
+    "@angular/compiler": "~17.0.0",
+    "@angular/core": "~17.0.0",
+    "@angular/forms": "~17.0.0",
+    "@angular/platform-browser": "~17.0.0",
+    "@angular/platform-browser-dynamic": "~17.0.0",
+    "@angular/router": "~17.0.0",
     "@swc/helpers": "~0.5.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~17.0.0",
+    "@angular-devkit/core": "~17.0.0",
+    "@angular-devkit/schematics": "~17.0.0",
+    "@angular-eslint/eslint-plugin": "~17.0.0",
+    "@angular-eslint/eslint-plugin-template": "~17.0.0",
+    "@angular-eslint/template-parser": "~17.0.0",
+    "@angular/cli": "~17.0.0",
+    "@angular/compiler-cli": "~17.0.0",
+    "@angular/language-service": "~17.0.0",
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@nx/angular": "17.3.0-canary.20240109-2360918",
+    "@nx/cypress": "17.3.0-canary.20240109-2360918",
     "@nx/eslint": "17.3.0-canary.20240109-2360918",
+    "@nx/vue": "17.3.0-canary.20240109-2360918",
+    "@nx/nuxt": "17.3.0-canary.20240109-2360918",
     "@nx/eslint-plugin": "17.3.0-canary.20240109-2360918",
+    "@nx/jest": "17.3.0-canary.20240109-2360918",
     "@nx/js": "17.3.0-canary.20240109-2360918",
     "@nx/react": "17.3.0-canary.20240109-2360918",
+    "@nx/storybook": "17.3.0-canary.20240109-2360918",
     "@nx/vite": "17.3.0-canary.20240109-2360918",
+    "@nx/web": "17.3.0-canary.20240109-2360918",
+    "@nx/webpack": "17.3.0-canary.20240109-2360918",
     "@nx/workspace": "17.3.0-canary.20240109-2360918",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@schematics/angular": "~17.0.0",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
@@ -28,17 +62,29 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.0.4",
+    "babel-jest": "^29.4.1",
+    "cypress": "^13.0.0",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jest-preset-angular": "~13.1.4",
     "jsdom": "~22.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "17.3.0-canary.20240109-2360918",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.2.2",
+    "url-loader": "^4.1.1",
     "vite": "^5.0.0",
-    "vitest": "^1.0.4"
+    "vitest": "^1.0.4",
+    "webpack-cli": "^5.1.4"
   }
 }
