--- a/package.json
+++ b/package.json
@@ -33,19 +33,19 @@
     "@angular/language-service": "~17.0.0",
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "@nx/angular": "17.3.0-canary.20240109-2360918",
-    "@nx/cypress": "17.3.0-canary.20240109-2360918",
-    "@nx/eslint": "17.3.0-canary.20240109-2360918",
-    "@nx/eslint-plugin": "17.3.0-canary.20240109-2360918",
-    "@nx/jest": "17.3.0-canary.20240109-2360918",
-    "@nx/js": "17.3.0-canary.20240109-2360918",
-    "@nx/react": "17.3.0-canary.20240109-2360918",
-    "@nx/storybook": "17.3.0-canary.20240109-2360918",
-    "@nx/vite": "17.3.0-canary.20240109-2360918",
-    "@nx/vue": "17.3.0-canary.20240109-2360918",
-    "@nx/web": "17.3.0-canary.20240109-2360918",
-    "@nx/webpack": "17.3.0-canary.20240109-2360918",
-    "@nx/workspace": "17.3.0-canary.20240109-2360918",
+    "@nx/angular": "18.0.0-katrin.0",
+    "@nx/cypress": "18.0.0-katrin.0",
+    "@nx/eslint": "18.0.0-katrin.0",
+    "@nx/eslint-plugin": "18.0.0-katrin.0",
+    "@nx/jest": "18.0.0-katrin.0",
+    "@nx/js": "18.0.0-katrin.0",
+    "@nx/react": "18.0.0-katrin.0",
+    "@nx/storybook": "18.0.0-katrin.0",
+    "@nx/vite": "18.0.0-katrin.0",
+    "@nx/vue": "18.0.0-katrin.0",
+    "@nx/web": "18.0.0-katrin.0",
+    "@nx/webpack": "18.0.0-katrin.0",
+    "@nx/workspace": "18.0.0-katrin.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@schematics/angular": "~17.0.0",
     "@svgr/webpack": "^8.0.1",
@@ -82,7 +82,7 @@
     "jest-preset-angular": "~13.1.4",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "17.3.0-canary.20240109-2360918",
+    "nx": "18.0.0-katrin.0",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
