--- a/package.json
+++ b/package.json
@@ -48,6 +48,17 @@
     "@nx/workspace": "18.0.0-katrin.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@schematics/angular": "~17.0.0",
+    "@storybook/addon-essentials": "7.6.7",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/angular": "7.6.7",
+    "@storybook/core-server": "7.6.7",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/react-vite": "^7.5.3",
+    "@storybook/react-webpack5": "7.6.7",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/vue3": "7.6.7",
+    "@storybook/vue3-vite": "7.6.7",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
@@ -85,6 +96,7 @@
     "nx": "18.0.0-katrin.0",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
+    "storybook": "7.6.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2",
